// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple stacks API-driven workflow deploy a stack 1`] = `
Array [
  "synthing",
  "synthed",
  "diffing",
  "diffed",
  "deploying",
  "deploy update",
  "deploy update",
  "deploy update",
  "deploy update",
  "deploy update",
  "deployed",
]
`;

exports[`multiple stacks API-driven workflow destoy a stack 1`] = `
Array [
  "synthing",
  "synthed",
  "diffing",
  "diffed",
  "destroying",
  "deploy update",
  "deploy update",
  "deploy update",
  "deploy update",
  "deploy update",
  "deploy update",
  "destroyed",
]
`;

exports[`multiple stacks API-driven workflow get outputs for a stack 1`] = `
Array [
  "synthing",
  "synthed",
]
`;

exports[`multiple stacks CLI-driven workflow synth 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"null_resource\\": [
          \\"provisioner\\"
        ]
      },
      \\"stackName\\": \\"first\\",
      \\"version\\": \\"stubbed\\"
    },
    \\"outputs\\": {
      \\"first\\": {
        \\"output\\": \\"output\\"
      }
    }
  },
  \\"output\\": {
    \\"output\\": {
      \\"value\\": \\"first\\"
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"first/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        },
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo \\\\\\"hello deploy\\\\\\"\\"
            }
          }
        ]
      }
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"source\\": \\"null\\",
        \\"version\\": \\" ~> 3.1.0\\"
      }
    }
  }
}"
`;

exports[`multiple stacks CLI-driven workflow synth 2`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"null_resource\\": [
          \\"provisioner\\"
        ]
      },
      \\"stackName\\": \\"second\\",
      \\"version\\": \\"stubbed\\"
    },
    \\"outputs\\": {
      \\"second\\": {
        \\"output\\": \\"output\\"
      }
    }
  },
  \\"output\\": {
    \\"output\\": {
      \\"value\\": \\"second\\"
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"second/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        },
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo \\\\\\"hello deploy\\\\\\"\\"
            }
          }
        ]
      }
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"source\\": \\"null\\",
        \\"version\\": \\" ~> 3.1.0\\"
      }
    }
  }
}"
`;

exports[`multiple stacks CLI-driven workflow synth with json output 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"null_resource\\": [
          \\"provisioner\\"
        ]
      },
      \\"stackName\\": \\"first\\",
      \\"version\\": \\"stubbed\\"
    },
    \\"outputs\\": {
      \\"first\\": {
        \\"output\\": \\"output\\"
      }
    }
  },
  \\"output\\": {
    \\"output\\": {
      \\"value\\": \\"first\\"
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"first/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        },
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo \\\\\\"hello deploy\\\\\\"\\"
            }
          }
        ]
      }
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"source\\": \\"null\\",
        \\"version\\": \\" ~> 3.1.0\\"
      }
    }
  }
}
"
`;
